# wetcher

./: .gitignore  Cargo.toml  README.md  flake.nix
migrations/: 20230927140936_Create_resources_table.sql
src/: cmd.rs  job.rs  main.rs
